{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "KnightInput",
            "id": "d2a0227e-f879-4de6-8929-2003ac13ca47",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "4b114659-dd5b-4d64-a2fb-52ea4aab7582",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ad1ee635-9cd8-47db-b0a2-b23b54b01ecd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "572ca56b-567d-4099-adb3-696d7fe7d951",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ef5678db-5cda-4e05-b43a-e54cb0c691bd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "60efe623-3487-4072-a250-4bfe2261fb70",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "4c7d1636-b85e-4845-9df5-431fa780a35f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eb6cff69-3def-4df5-aa6b-6cb31531783c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ab1c08e-38a2-4d22-a73e-3a9421c37c88",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}